trunk/Archive2/6a/66b8f2cefce6fc/output
+ g++-5.1 -std=c++14 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread main.cpp
main.cpp: In function 'int main(int, char**)':
main.cpp:43:33: error: no matching function for call to 'Vector<int>::Vector(OutputIter&, OutputIter&)'
     Vector<int> c(output, output);
                                 ^
main.cpp:23:5: note: candidate: template<class InputIt, class> Vector<T>::Vector(InputIt, InputIt)
     Vector(InputIt, InputIt)
     ^
main.cpp:23:5: note:   template argument deduction/substitution failed:
main.cpp:30:1: note: candidate: Vector<T>::Vector(size_t, T) [with T = int; size_t = long unsigned int]
 Vector<T>::Vector(size_t, T)
 ^
main.cpp:30:1: note:   no known conversion for argument 1 from 'OutputIter' to 'size_t {aka long unsigned int}'
main.cpp:17:7: note: candidate: constexpr Vector<int>::Vector(const Vector<int>&)
 class Vector {
       ^
main.cpp:17:7: note:   candidate expects 1 argument, 2 provided
main.cpp:17:7: note: candidate: constexpr Vector<int>::Vector(Vector<int>&&)
main.cpp:17:7: note:   candidate expects 1 argument, 2 provided
+ clang++ -std=c++14 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread main.cpp
main.cpp:43:17: error: no matching constructor for initialization of 'Vector<int>'
    Vector<int> c(output, output);
                ^ ~~~~~~~~~~~~~~
main.cpp:19:14: note: candidate constructor not viable: no known conversion from 'OutputIter' to 'size_t' (aka 'unsigned long') for 1st argument
    explicit Vector(size_t, T=T());
             ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/type_traits:2388:44: note: candidate template ignored: disabled by 'enable_if' [with InputIt = OutputIter]
    using enable_if_t = typename enable_if<_Cond, _Tp>::type;
                                           ^
main.cpp:17:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
class Vector {
      ^
main.cpp:17:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
1 error generated.
